--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,11 @@
+/* stylelint-disable rule-empty-line-before */
+
+/* stylelint-disable keyframes-name-pattern */
+
+/* stylelint-disable indentation */
+
+/* stylelint-disable selector-class-pattern */
+
 .App {
   text-align: center;
 }
